fixed no-border-radius-on-scrollbar

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -41,7 +41,7 @@
 
   #scrollbar-vertical{
     top: 0; right: 10%;
-    width: 30%; height: 0;
+    width: 40%; height: 0;
 
     -webkit-transition: width .3s ease, opacity .2s ease, visibility .2s 0s;
   }
@@ -69,7 +69,7 @@
 
   #scrollbar-horizontal{
     bottom: 10%; left: 0;
-    width: 0; height: 30%;
+    width: 0; height: 40%;
 
     -webkit-transition: height .3s ease, opacity .2s ease, visibility .2s 0s;
   }
